[gd_scene load_steps=3 format=2]

[ext_resource path="res://interface/UIItem.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0352941, 0.0392157, 0.129412, 1 )
border_width_top = 2
border_color = Color( 0.0352941, 0.0392157, 0.129412, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="UIItem" type="Panel"]
margin_right = 335.0
margin_bottom = 60.0
rect_min_size = Vector2( 140, 60 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="TooltipTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_right = 315.0
margin_bottom = 60.0
custom_constants/separation = 20
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 0 )
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 80.0
margin_top = 23.0
margin_right = 235.0
margin_bottom = 37.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
valign = 1
clip_text = true

[node name="AmountLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 255.0
margin_top = 23.0
margin_right = 295.0
margin_bottom = 37.0
rect_min_size = Vector2( 40, 0 )
align = 2
valign = 1
